// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntityBase.ts should create 1`] = `
Array [
  Object {
    "date": 2020-01-01T08:00:00.000Z,
    "name": "before",
    "payload": Object {
      "payload": true,
    },
  },
  Object {
    "date": 2020-01-01T08:00:00.000Z,
    "name": "created",
    "payload": Object {
      "created": true,
    },
  },
]
`;

exports[`EntityBase.ts should get events 1`] = `
Array [
  Object {
    "date": 2020-01-01T08:00:00.000Z,
    "name": "before",
    "payload": Object {
      "payload": true,
    },
  },
]
`;

exports[`EntityBase.ts should return to json 1`] = `
Object {
  "created": 2020-01-01T07:00:00.000Z,
  "events": Array [
    Object {
      "date": 2020-01-01T08:00:00.000Z,
      "name": "before",
      "payload": Object {
        "payload": true,
      },
    },
  ],
  "id": "e397bc49-849e-4df6-a536-7b9fa3574ace",
  "updated": 2020-01-01T09:00:00.000Z,
  "version": 0,
}
`;
